Reduce issues panel whitespace
As part of https://crrev.com/c/5676126 we increased the white
space for each row. This CL reduces this change to only apply on the
top most parent.

Before: https://i.imgur.com/3sETSy4.png
After: https://i.imgur.com/VAJdrPT.png

Fixed: 388520157
Reviewed-on: https://chromium-review.googlesource.com/c/devtools/devtools-frontend/+/6212664
Auto-Submit: Kim-Anh Tran <kimanh@chromium.org>
Commit-Queue: Kim-Anh Tran <kimanh@chromium.org>

--- a/front_end/panels/issues/issuesTree.css
+++ b/front_end/panels/issues/issuesTree.css
@@ -16,11 +16,15 @@
   --issue-indent: 8px;
 }
 
+/* The top most parents need to be larger, as they may include an unhide button. */
+.tree-outline.issues > li {
+  min-height: var(--sys-size-13);
+}
+
 /* Override whitespace behavior for tree items to allow wrapping */
 .issues li {
   white-space: normal;
   align-items: flex-start;
-  min-height: var(--sys-size-13);
 }
 
 /* Hide toggle for tree items which cannot be collapsed */
